# PPTAgent

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  __init__.py  app.py  pyproject.toml  requirements.txt  run_app.bat  run_harness.bat
core/: mock_adapter.py  renderer.py  schema.py  template_packs.py
core/llm/: __init__.py  claude.py  interface.py  mock_adapter.py  openai.py
core/prompts/: slide_planner.py
docs/: DESIGN.md  FRONTEND.md  PLANS.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  RELIABILITY.md  SECURITY.md
docs/product-specs/: index.md
harness/: run_manual_eval.py
harness/cases/: project_status_exec_review.json  weekly_report_basic.json
harness/expected/: review_heuristics.md
